[gd_scene load_steps=7 format=3 uid="uid://cr58rfn6mjrfd"]

[ext_resource type="Script" uid="uid://c6nuondjp2227" path="res://enemies/base_enemy.gd" id="1_pirjb"]
[ext_resource type="SpriteFrames" uid="uid://bnt5ii47nsd55" path="res://enemies/skeleton.tres" id="2_bfj6p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2rxfc"]
radius = 13.0
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pirjb"]
size = Vector2(23.5, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mixeo"]
size = Vector2(27.5, 46)

[sub_resource type="CircleShape2D" id="CircleShape2D_pirjb"]
radius = 332.014

[node name="Mob" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
script = ExtResource("1_pirjb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_bfj6p")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_2rxfc")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 82)

[node name="StompDetector" type="Area2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2(-0.25, -14)
shape = SubResource("RectangleShape2D_pirjb")

[node name="SideDetector" type="Area2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideDetector"]
position = Vector2(-0.25, 10)
shape = SubResource("RectangleShape2D_mixeo")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_pirjb")

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(38, 0)

[connection signal="body_entered" from="StompDetector" to="." method="_on_stomp_detector_body_entered"]
[connection signal="body_entered" from="SideDetector" to="." method="_on_side_detector_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
